--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,9 @@ ExportedObj/
 # Unity3D generated file on crash reports
 sysinfo.txt
 
+# Unity3D generated log files
+*.log
+
 # Builds
 *.apk
 *.unitypackage
